k8s/sec-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: nodeapp-secure
  namespace: default
spec:
  selector:
    run: nodeapp
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 3000
