k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      run: nodeapp
  strategy: {}
  template:
    metadata:
      labels:
        run: nodeapp
    spec:
      containers:
      - image: gcr.io/wideops-candidate6/omar-nodeapp:test
        imagePullPolicy: IfNotPresent
        name: nodeapp
        ports:
        - containerPort: 80
          protocol: TCP 

---

apiVersion: v1
kind: Service
metadata:
  name: nodeapp
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
    name: http
  selector:
    run: nodeapp
  type: NodePort

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapp-ingress
spec:
  defaultBackend:
    service:
      name: nodeapp
      port:
        number: 80
